--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,8 @@
 @import "abstracts/variables";
 @import "abstracts/mixins";
 
+@import "components/buttons";
+
+@import "layout/navigation";
+
 @import "base/base";
