--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -36,3 +36,11 @@ button {
   height: 100%;
   overflow-x: hidden;
 }
+
+.background {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
