created games section

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,9 +2,11 @@
 @import "abstracts/mixins";
 
 @import "components/buttons";
+@import "components/gameShowcase";
 
 @import "layout/navigation";
 @import "layout/hero";
 @import "layout/features";
+@import "layout/games";
 
 @import "base/base";
