added aos anims on content so far

--- a/scss/components/_gameShowcase.scss
+++ b/scss/components/_gameShowcase.scss
@@ -1,6 +1,5 @@
 .game-showcase {
-  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
-    url(/images/nba.jpg) right center/cover no-repeat;
+  background: url(/images/nba.jpg) right center/cover no-repeat;
   height: 70vh;
   position: relative;
 
