--- a/scss/layout/_games.scss
+++ b/scss/layout/_games.scss
@@ -34,7 +34,7 @@
       visibility: hidden;
       opacity: 0;
       color: #fff;
-      transition: opacity 0.5s ease-in-out;
+      transition: all 0.5s ease-in-out;
       font-size: size(xl);
       padding: 1rem;
       display: flex;
