--- a/scss/components/_gameShowcase.scss
+++ b/scss/components/_gameShowcase.scss
@@ -28,3 +28,33 @@
     }
   }
 }
+
+.game-showcase-2 {
+  @extend .game-showcase;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(/images/sackboy.jpg) center center/cover no-repeat;
+  &-content {
+    position: absolute;
+    top: 50%;
+    left: 15%;
+    text-shadow: 0.4rem 0.4rem 1rem color(black);
+    text-align: center;
+
+    h3 {
+      @include headingStyles();
+      color: color(white);
+      font-size: size(xl) + 4rem;
+    }
+
+    p {
+      @include textStyles();
+      color: color(white);
+      font-size: size(lg);
+      margin: 2rem 0;
+    }
+
+    .btn-dark {
+      width: 40%;
+    }
+  }
+}
