--- a/scss/layout/_games.scss
+++ b/scss/layout/_games.scss
@@ -16,11 +16,19 @@
     grid-gap: 2rem;
     max-width: 1300px;
     margin: auto;
+
+    @include response(xl) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @include response(md) {
+      grid-template-columns: 1fr;
+    }
   }
 
   .card {
     position: relative;
-    box-shadow: 0.1rem 0.1rem 1rem color(white);
+    // box-shadow: 0.1rem 0.1rem 1rem color(white);
 
     .img-description {
       @include textStyles();
@@ -53,6 +61,10 @@
       width: 100%;
       height: 50rem;
       object-fit: cover;
+
+      @include response(xl) {
+        height: 100%;
+      }
     }
   }
 }
