--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -3,7 +3,7 @@
   font-size: size(xs);
   background-color: color(black);
   color: color(white);
-  width: 20%;
+  width: 20rem;
   border: 0.1rem solid color(primary);
   transition: all 0.3s ease;
 
@@ -18,7 +18,7 @@
   @extend .btn-dark;
 
   background-color: color(primary);
-  width: 20%;
+  width: 20rem;
 
   &:hover {
     background-color: color(black);
