--- a/scss/layout/_store.scss
+++ b/scss/layout/_store.scss
@@ -8,11 +8,23 @@
   justify-content: center;
   text-align: center;
 
+  @include response(xl) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @include response(sm) {
+    grid-template-columns: 1fr;
+  }
+
   &-link {
     a i {
       font-size: size(xl) + 5rem;
       color: color(black);
       transition: all 0.3s ease;
+
+      @include response(xl) {
+        margin-top: 5rem;
+      }
 
       &:hover {
         color: color(primary);
