added back to top button

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 
 @import "components/buttons";
 @import "components/gameShowcase";
+@import "components/backToTop";
 
 @import "layout/navigation";
 @import "layout/hero";
