--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -1,9 +1,10 @@
 .header {
   background-color: color(black);
+  position: sticky;
+  top: 0;
+  z-index: 100;
 
   .navigation {
-    position: sticky;
-    top: 0;
     display: flex;
     align-items: center;
     justify-content: space-around;
