added hamburger menu

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 @import "components/buttons";
 @import "components/gameShowcase";
 @import "components/backToTop";
+@import "components/hamburgerMenu";
 
 @import "layout/navigation";
 @import "layout/hero";
